--- a/src/css/utils/root.css
+++ b/src/css/utils/root.css
@@ -5,6 +5,12 @@
   --fontMain: Trebuchet MS, "Lucida Grande", "Lucida Sans Unicode",
     "Lucida Sans", Tahoma, sans-serif;
   --fontExo: "Exo2.0-Thin", Arial, sans-serif;
+
+  @media (--viewport-large) {
+    display: table;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 $blue: #1698d9;
